# aoc2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md
day1/: day1_common.hpp  part1.cpp  part2.cpp  part2_emanuelo.cpp
day2/: part1.cpp  part2.cpp
day3/: part1.cpp  part2.cpp
day4/: part1.cpp
