cmake_minimum_required(VERSION 4.0)
project(aoc_2025)

set(CMAKE_CXX_STANDARD 20)

# Day 1
add_executable(aoc_2025_day1_part1 day1/part1.cpp)
add_executable(aoc_2025_day1_part2 day1/part2.cpp)
add_executable(aoc_2025_day1_part2_emanuelo day1/part2_emanuelo.cpp)

# Day 2
add_executable(aoc_2025_day2_part1 day2/part1.cpp)
add_executable(aoc_2025_day2_part2 day2/part2.cpp)

# Day 3
add_executable(aoc_2025_day3_part1 day3/part1.cpp)
add_executable(aoc_2025_day3_part2 day3/part2.cpp)

# Day 4
add_executable(aoc_2025_day4_part1 day4/part1.cpp)
